; ModuleID = '/home/carl/AnghaBench/linux/fs/omfs/extr_inode.c_omfs_bread.c'
source_filename = "/home/carl/AnghaBench/linux/fs/omfs/extr_inode.c_omfs_bread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_head = type { i32 }
%struct.super_block = type { i32 }
%struct.omfs_sb_info = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.buffer_head* @omfs_bread(%struct.super_block* %0, i64 %1) #0 {
  %3 = alloca %struct.buffer_head*, align 8
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.omfs_sb_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.super_block*, %struct.super_block** %4, align 8
  %8 = call %struct.omfs_sb_info* @OMFS_SB(%struct.super_block* %7)
  store %struct.omfs_sb_info* %8, %struct.omfs_sb_info** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load %struct.omfs_sb_info*, %struct.omfs_sb_info** %6, align 8
  %11 = getelementptr inbounds %struct.omfs_sb_info, %struct.omfs_sb_info* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sge i64 %9, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store %struct.buffer_head* null, %struct.buffer_head** %3, align 8
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.super_block*, %struct.super_block** %4, align 8
  %17 = load %struct.omfs_sb_info*, %struct.omfs_sb_info** %6, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @clus_to_blk(%struct.omfs_sb_info* %17, i64 %18)
  %20 = call %struct.buffer_head* @sb_bread(%struct.super_block* %16, i32 %19)
  store %struct.buffer_head* %20, %struct.buffer_head** %3, align 8
  br label %21

21:                                               ; preds = %15, %14
  %22 = load %struct.buffer_head*, %struct.buffer_head** %3, align 8
  ret %struct.buffer_head* %22
}

declare dso_local %struct.omfs_sb_info* @OMFS_SB(%struct.super_block*) #1

declare dso_local %struct.buffer_head* @sb_bread(%struct.super_block*, i32) #1

declare dso_local i32 @clus_to_blk(%struct.omfs_sb_info*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
